--- a/css/styles.scss
+++ b/css/styles.scss
@@ -57,8 +57,8 @@ header{
                 right:0;
                 height:100vh;
                 width:100vw;
-                background-color: #264653;
-                color:darkgray;
+                background-color: #4fa1a3;//#264653;
+                color:rgb(26, 26, 26);
                 //opacity:0.95;
                 display:flex;
                 flex-direction:column;
@@ -76,10 +76,10 @@ header{
                         margin-bottom: 1rem;
                         text-align:center;
                         a{
-                            color:darkgray;
+                            color:rgb(26, 26, 26);
                         }
                         a:hover{
-                            color: #2a9d8f;
+                            color: #ece7d5;
                         }
                         button{
                             background-color: #f4a261;
@@ -92,7 +92,7 @@ header{
                             font-weight:600;
                             margin-top:1rem;
                             &:hover{
-                                background-color: #e76f51;
+                                background-color: #ece7d5;
                             }
                         }
                     }
@@ -107,12 +107,13 @@ header{
 
 .intro{
     background: rgb(42,157,143);
-    background: linear-gradient(47deg, rgba(42,157,143,1) 0%, rgba(233,196,106,1) 100%);
+    background: linear-gradient(0deg, rgba(42,157,143,1) 0%, rgba(255,255,255,1) 67%, rgba(255,255,255,1) 100%);  
 //     background: rgb(42,157,143);
-//     background: linear-gradient(126deg, rgba(42,157,143,1) 0%, rgba(92,167,133,1) 26%, rgba(197,189,113,1) 81%, rgba(233,196,106,1) 100%);
+// background: linear-gradient(0deg, rgba(42,157,143,1) 0%, rgba(50,161,147,1) 20%, rgba(255,255,255,1) 80%, rgba(255,255,255,1) 100%);
+    
     height:100vh;
     padding-left:1rem;
-   padding-bottom:1rem;
+    padding-bottom:1rem;
     display:flex;
     flex-direction:column;
     justify-content: center;
@@ -125,16 +126,17 @@ header{
 
 .projects{
     background-color: #2a9d8f;
-    padding:2rem 1rem;
+    padding:3rem 1rem 2rem 1rem;
     .container{
         h2{
-            margin-bottom:1rem;
+            margin-bottom:2rem;
         }
         .projects-container{
             .project-container{
+                margin-bottom:1rem;
                 .text{
                     .project-title{
-                        margin-bottom:0.3rem;
+                        margin-bottom:0.5rem;
                     }
                     .description{
                         line-height: 1.4rem;
@@ -143,8 +145,7 @@ header{
                         padding:0.3rem 0.8rem;
                         border-radius: 5px;
                         box-shadow:1px 1px 5px rgb(42, 42, 42);
-                    }
-                    
+                    }     
                     .technologies{
                         display:flex;
                         flex-direction: row;
@@ -209,20 +210,19 @@ header{
     
 } 
 .about{
-    background-color: #238478;
-    padding:1.5rem 1rem;
-    // h2{
-    //     margin-bottom:0.4rem;
-    // }
+    background: rgb(180,210,216);
+background: linear-gradient(0deg, rgba(180,210,216,1) 0%, rgba(42,157,143,1) 100%);
+    padding:3rem 1rem 2rem 1rem;
     p{
         margin-top:0.4rem;
         line-height: 1.4rem;
+        padding:0.5rem;
     }
 }
 .contact{
-    background-color: #264653;
+    background-color:#b4d2d8;
     text-align:center;
-    padding: 2rem 1rem;
+    padding: 4rem 1rem 3rem 1rem;
     .container{
         max-width:360px;
         margin:0 auto 0 auto;
@@ -253,7 +253,7 @@ header{
 }
 
 footer{
-    background-color: #264653;
+    background-color: #b4d2d8;
     text-align:center;
     padding-bottom:1rem;
 }
@@ -262,6 +262,7 @@ footer{
 
     .container{
         max-width:unset;
+        width:100%;
         //de revenit cand stabilim max-width
     }
     header{
@@ -314,6 +315,10 @@ footer{
             }   
         }
     }
+    .intro{
+        //text-align: left;
+        padding-left:15%;
+    }
     .projects{
         .container{
             .projects-container{
@@ -365,23 +370,64 @@ footer{
                     }
                 }
             }
-            
         }
+    }  
+}
+
+@media (min-width:1024px){
+    .container{
+        max-width:1200px;
     }
-    
-    @media (min-width:1024px){
-        .projects{
-            .container{
-                max-width:1200px;
-                .projects-container{
-                    .project-container{
-                        .photo{
-                            max-width:600px;
+    h2{
+        font-size:1.8rem;
+    }
+    header{
+        font-size:1.3rem;
+        .logo a{
+            font-size:2rem;
+        }
+        .container .navbar nav ul li button{
+                                        font-size:1.1rem;
+                                     }
+    }
+    .intro{
+        h1{
+            font-size:4.5rem;
+        }
+        h2{
+            font-size:2.5rem;
+        }
+        padding-left:20%;
+    }
+    .projects{
+        .container{
+            .projects-container{
+                .project-container{
+                    .text{
+                        .project-title{
+                            font-size:1.7rem;
                         }
+                    }
+                    .photo{
+                        max-width:600px;
+                        &:hover{
+                            .project-links{
+                                height:99%;
+                                a.github svg{
+                                    width:40px;
+                                }
+                                a.external-link svg{
+                                    height:80px;
+                                }
+                            }
+                        }                        
                     }
                 }
             }
-        }  
+        }
+    }  
+    .contact{
+        .container ul li a svg{ width:40px;}
     }
-        
 }
+
